--- a/ride/ride.csproj
+++ b/ride/ride.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Plugin.MaterialDesignControls" Version="1.11.2" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2401" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Forms.GoogleMaps" Version="4.0.0-BETA1" />
     <PackageReference Include="Xamarin.Forms.Visual.Material" Version="5.0.0.2401" />
   </ItemGroup>
 
