--- a/ride.Android/ride.Android.csproj
+++ b/ride.Android/ride.Android.csproj
@@ -72,6 +72,9 @@
     <PackageReference Include="Xamarin.Forms.Visual.Material">
       <Version>5.0.0.2401</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.GooglePlayServices.Auth">
+      <Version>119.2.0.3</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GoogleManager.cs" />
