--- a/ride/ride.csproj
+++ b/ride/ride.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Plugin.MaterialDesignControls" Version="1.11.2" />
+    <PackageReference Include="Twilio" Version="5.75.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2401" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
     <PackageReference Include="Xamarin.Forms.GoogleMaps" Version="4.0.0-BETA1" />
