--- a/ride/ride.csproj
+++ b/ride/ride.csproj
@@ -35,5 +35,8 @@
     <EmbeddedResource Update="Vistas\Registro\Empezar.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Vistas\Reutilizables\Listapaises.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
