--- a/ride/ride.csproj
+++ b/ride/ride.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="libphonenumber-csharp" Version="8.12.48" />
     <PackageReference Include="Plugin.MaterialDesignControls" Version="1.11.2" />
+    <PackageReference Include="Rg.Plugins.Popup" Version="2.1.0" />
     <PackageReference Include="Twilio" Version="5.75.1" />
     <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2401" />
