--- a/ride/ride.csproj
+++ b/ride/ride.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Plugin.MaterialDesignControls" Version="1.11.2" />
     <PackageReference Include="Rg.Plugins.Popup" Version="2.1.0" />
     <PackageReference Include="Twilio" Version="5.75.1" />
+    <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.2" />
     <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2401" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
