--- a/ride.Android/ride.Android.csproj
+++ b/ride.Android/ride.Android.csproj
@@ -143,5 +143,8 @@
   <ItemGroup>
     <AndroidAsset Include="Assets\pinactual.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\fijar.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
