--- a/ride/ride.csproj
+++ b/ride/ride.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FirebaseDatabase.net" Version="4.0.7" />
     <PackageReference Include="libphonenumber-csharp" Version="8.12.48" />
     <PackageReference Include="Plugin.MaterialDesignControls" Version="1.11.2" />
     <PackageReference Include="Rg.Plugins.Popup" Version="2.1.0" />
