--- a/ride/ride.csproj
+++ b/ride/ride.csproj
@@ -32,6 +32,9 @@
     <EmbeddedResource Update="Vistas\Navegacion\Adondevamos.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Vistas\Navegacion\Esperarofertas.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Vistas\Navegacion\Ofertar.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
