--- a/rideDriver/rideDriver.Android/rideDriver.Android.csproj
+++ b/rideDriver/rideDriver.Android/rideDriver.Android.csproj
@@ -57,8 +57,17 @@
     <PackageReference Include="FirebaseDatabase.net">
       <Version>4.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Sharpnado.Shadows">
+      <Version>1.2.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Android.Support.v7.AppCompat">
+      <Version>28.0.0.3</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2515" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
+    <PackageReference Include="Xamarin.Forms.GoogleMaps">
+      <Version>5.0.0-BETA1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
